src/OpenCvSharpExtern/features_Feature2D.h

CVAPI(ExceptionStatus) features_Feature2D_detect_Mat1(
    cv::Feature2D *detector,
    cv::Mat *image,
    std::vector<cv::KeyPoint> *keypoints,
    cv::Mat *mask)
{
    return cvTry([&] {
        detector->detect(*image, *keypoints, entity(mask));
    });
}
CVAPI(ExceptionStatus) features_Feature2D_detect_Mat2(
    cv::Feature2D *detector,
    cv::Mat **images,
    int imageLength,
    std::vector<std::vector<cv::KeyPoint> > *keypoints,
    cv::Mat **mask)
{
    return cvTry([&] {
        std::vector<cv::Mat> imageVec;
        std::vector<cv::Mat> maskVec;

        imageVec.reserve(imageLength);
        for (auto i = 0; i < imageLength; i++)
            imageVec.push_back(*images[i]);

        if (mask != nullptr)
        {
            maskVec.reserve(imageLength);
            for (auto i = 0; i < imageLength; i++)
                maskVec.push_back(*mask[i]);
        }

        detector->detect(imageVec, *keypoints, maskVec);
    });
}
CVAPI(ExceptionStatus) features_Feature2D_detect_InputArray(
    cv::Feature2D *obj,
    const interop::InputArrayProxy* image,
    std::vector<cv::KeyPoint> *keypoints,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        obj->detect(InProxy(*image), *keypoints, InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) features_Feature2D_compute1(
    cv::Feature2D *obj,
    const interop::InputArrayProxy* image,
    std::vector<cv::KeyPoint> *keypoints,
    const interop::OutputArrayProxy* descriptors)
{
    return cvTry([&] {
        obj->compute(InProxy(*image), *keypoints, OutProxy(*descriptors));
    });
}
CVAPI(ExceptionStatus) features_Feature2D_compute2(
    cv::Feature2D *detector,
    cv::Mat **images,
    int imageLength,
    std::vector<std::vector<cv::KeyPoint> > *keypoints,
    cv::Mat **descriptors,
    int descriptorsLength)
{
    return cvTry([&] {
        std::vector<cv::Mat> imageVec;
        std::vector<cv::Mat> descriptorsVec;

        imageVec.reserve(imageLength);
        for (auto i = 0; i < imageLength; i++)
            imageVec.push_back(*images[i]);
        descriptorsVec.reserve(descriptorsLength);
        for (auto i = 0; i < descriptorsLength; i++)
            descriptorsVec.push_back(*descriptors[i]);

        detector->compute(imageVec, *keypoints, descriptorsVec);

        // detector->compute() may reallocate the elements of descriptorsVec (a local copy),
        // so the results must be copied back into the caller-owned Mat objects explicitly.
        const auto n = std::min(static_cast<size_t>(descriptorsLength), descriptorsVec.size());
        for (size_t i = 0; i < n; i++)
            *descriptors[i] = descriptorsVec[i];
    });
}
CVAPI(ExceptionStatus) features_Feature2D_detectAndCompute(
    cv::Feature2D *detector,
    const interop::InputArrayProxy* image,
    const interop::InputArrayProxy* mask,
    std::vector<cv::KeyPoint> *keypoints,
    const interop::OutputArrayProxy* descriptors,
    int useProvidedKeypoints)
{
    return cvTry([&] {
        detector->detectAndCompute(InProxy(*image), InProxy(*mask), *keypoints, OutProxy(*descriptors), useProvidedKeypoints != 0);
    });
}
CVAPI(ExceptionStatus) features_Feature2D_descriptorSize(cv::Feature2D *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->descriptorSize();
    });
}
CVAPI(ExceptionStatus) features_Feature2D_descriptorType(cv::Feature2D *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->descriptorType();
    });
}
CVAPI(ExceptionStatus) features_Feature2D_defaultNorm(cv::Feature2D *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->defaultNorm();
    });
}
CVAPI(ExceptionStatus) features_Feature2D_empty(cv::Feature2D *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->empty() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) features_Feature2D_write(cv::Feature2D *obj, const char *fileName)
{
    return cvTry([&] {
        const cv::String fileNameString(fileName);
        obj->write(fileNameString);
    });
}
CVAPI(ExceptionStatus) features_Feature2D_read(cv::Feature2D *obj, const char *fileName)
{
    return cvTry([&] {
        obj->read(fileName);
    });
}
CVAPI(ExceptionStatus) features_Feature2D_getDefaultName(cv::Feature2D *obj, std::string *returnValue)
{
    return cvTry([&] {
        returnValue->assign(obj->getDefaultName());
    });
}
CVAPI(ExceptionStatus) features_SIFT_create(
    int nfeatures,
    int nOctaveLayers,
    double contrastThreshold,
    double edgeThreshold,
    double sigma,
    cv::Ptr<cv::SIFT> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::SIFT::create(
            nfeatures, nOctaveLayers, contrastThreshold, edgeThreshold, sigma);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_SIFT_delete(cv::Ptr<cv::SIFT> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_ORB_create(
    int nFeatures,
    float scaleFactor,
    int nlevels,
    int edgeThreshold,
    int firstLevel,
    int wtaK,
    int scoreType,
    int patchSize,
    int fastThreshold,
    cv::Ptr<cv::ORB> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::ORB::create(
            nFeatures, scaleFactor, nlevels, edgeThreshold, firstLevel, wtaK, static_cast<cv::ORB::ScoreType>(scoreType), patchSize, fastThreshold);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_ORB_delete(cv::Ptr<cv::ORB> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_ORB_setMaxFeatures(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setMaxFeatures(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getMaxFeatures(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMaxFeatures();
    });
}
CVAPI(ExceptionStatus) features_ORB_setScaleFactor(cv::ORB *obj, double val)
{
    return cvTry([&] {
        obj->setScaleFactor(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getScaleFactor(cv::ORB *obj, double *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getScaleFactor();
    });
}
CVAPI(ExceptionStatus) features_ORB_setNLevels(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setNLevels(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getNLevels(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getNLevels();
    });
}
CVAPI(ExceptionStatus) features_ORB_setEdgeThreshold(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setEdgeThreshold(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getEdgeThreshold(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getEdgeThreshold();
    });
}
CVAPI(ExceptionStatus) features_ORB_setFirstLevel(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setFirstLevel(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getFirstLevel(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getFirstLevel();
    });
}
CVAPI(ExceptionStatus) features_ORB_setWTA_K(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setWTA_K(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getWTA_K(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getWTA_K();
    });
}
CVAPI(ExceptionStatus) features_ORB_setScoreType(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setScoreType(static_cast<cv::ORB::ScoreType>(val));
    });
}
CVAPI(ExceptionStatus) features_ORB_getScoreType(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = static_cast<int>(obj->getScoreType());
    });
}
CVAPI(ExceptionStatus) features_ORB_setPatchSize(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setPatchSize(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getPatchSize(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getPatchSize();
    });
}
CVAPI(ExceptionStatus) features_ORB_setFastThreshold(cv::ORB *obj, int val)
{
    return cvTry([&] {
        obj->setFastThreshold(val);
    });
}
CVAPI(ExceptionStatus) features_ORB_getFastThreshold(cv::ORB *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getFastThreshold();
    });
}
CVAPI(ExceptionStatus) features_MSER_create(
    int delta,
    int minArea,
    int maxArea,
    double maxVariation,
    double minDiversity,
    int maxEvolution,
    double areaThreshold,
    double minMargin,
    int edgeBlurSize,
    cv::Ptr<cv::MSER> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::MSER::create(delta, minArea, maxArea, maxVariation, minDiversity, maxEvolution,
            areaThreshold, minMargin, edgeBlurSize);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_MSER_delete(cv::Ptr<cv::MSER> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_MSER_detectRegions(
    cv::MSER *obj,
    const interop::InputArrayProxy* image,
    std::vector<std::vector<cv::Point> > *msers,
    std::vector<cv::Rect> *bboxes)
{
    return cvTry([&] {
        obj->detectRegions(InProxy(*image), *msers, *bboxes);
    });
}
CVAPI(ExceptionStatus) features_MSER_setDelta(cv::MSER *obj, int delta)
{
    return cvTry([&] {
        obj->setDelta(delta);
    });
}
CVAPI(ExceptionStatus) features_MSER_getDelta(cv::MSER *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getDelta();
    });
}
CVAPI(ExceptionStatus) features_MSER_setMinArea(cv::MSER *obj, int minArea)
{
    return cvTry([&] {
        obj->setMinArea(minArea);
    });
}
CVAPI(ExceptionStatus) features_MSER_getMinArea(cv::MSER *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMinArea();
    });
}
CVAPI(ExceptionStatus) features_MSER_setMaxArea(cv::MSER *obj, int maxArea)
{
    return cvTry([&] {
        obj->setMaxArea(maxArea);
    });
}
CVAPI(ExceptionStatus) features_MSER_getMaxArea(cv::MSER *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getMaxArea();
    });
}
CVAPI(ExceptionStatus) features_MSER_setPass2Only(cv::MSER *obj, int f)
{
    return cvTry([&] {
        obj->setPass2Only(f != 0);
    });
}
CVAPI(ExceptionStatus) features_MSER_getPass2Only(cv::MSER *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getPass2Only() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) features_FAST1(
    const interop::InputArrayProxy* image,
    std::vector<cv::KeyPoint> *keypoints,
    int threshold,
    int nonmaxSupression)
{
    return cvTry([&] {
        cv::FAST(InProxy(*image), *keypoints, threshold, nonmaxSupression != 0);
    });
}
CVAPI(ExceptionStatus) features_FAST2(
    const interop::InputArrayProxy* image,
    std::vector<cv::KeyPoint> *keypoints,
    int threshold,
    int nonmaxSupression,
    int type)
{
    return cvTry([&] {
        cv::FAST(InProxy(*image), *keypoints, threshold, nonmaxSupression != 0, static_cast<cv::FastFeatureDetector::DetectorType>(type));
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_create(
    int threshold,
    int nonmaxSuppression,
    cv::Ptr<cv::FastFeatureDetector> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::FastFeatureDetector::create(threshold, nonmaxSuppression != 0);
        *returnValue = clone(ptr);
    });
}
CVAPI(ExceptionStatus) features_Ptr_FastFeatureDetector_delete(cv::Ptr<cv::FastFeatureDetector> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_setThreshold(cv::FastFeatureDetector *obj, int threshold)
{
    return cvTry([&] {
        obj->setThreshold(threshold);
    });
}
CVAPI(ExceptionStatus) features_FastFeatureDetector_getThreshold(cv::FastFeatureDetector *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getThreshold();
    });
}